# OpenMainframe

./: .gitignore  Cargo.toml  Makefile  PROMPT-BOOTSTRAP.md  PROMPT.md  RALPH-BMAD-VERSIONS.md  RALPH-PROMPT-AGENT.md  RALPH-PROMPT-IMPLEMENT.md  RALPH-PROMPT-UI-REVAMP.md  RALPH-PROMPT-UX-RESEARCH.md  RALPH-PROMPT.md  README.md
.claude/: ralph-loop.local.md
.claude/ralph-loop/: PROGRESS.md
.github/workflows/: ci.yml  release.yml
_bmad-output/: conformance-progress.md  implementation-progress.md  zowe-conformance-evaluation.md
_bmad-output/agent-app/: epics-openmainframe-agent.md  prd-openmainframe-agent.md  readiness-report.md  research-domain-modernization.md  research-technical-copilotkit-langgraph.md  research-technical-openmainframe-tools.md  sprint-plan.md
_bmad-output/gap-analysis/: batch-18-uss.md
_bmad-output/planning-artifacts/: architecture-assess-v3.0.md  architecture-cics-v3.0.md  architecture-db2-v3.0.md  architecture-deploy-v3.0.md  architecture-encoding-v3.0.md  architecture-ims-v3.0.md  architecture-sort-v3.0.md  architecture-v1.1.md  architecture-v1.2.md  architecture-v1.3.md  architecture-v1.5.md  architecture.md  epics-assess-v3.0.md  epics-cics-v3.0.md  epics-db2-v3.0.md  epics-deploy-v3.0.md  epics-encoding-v3.0.md  epics-ims-v3.0.md  epics-sort-v3.0.md  epics-v1.1.md  epics-v1.2.md  epics-v1.3.md  epics-v1.4.md  epics-v1.5.md  epics.md  prd-assess-v3.0.md  prd-cics-v3.0.md  prd-db2-v3.0.md  prd-deploy-v3.0.md  prd-encoding-v3.0.md  prd-ims-v3.0.md  prd-sort-v3.0.md  prd-v1.1.md  prd-v1.2.md  prd-v1.3.md  prd-v1.4.md  prd-v1.5.md  prd.md  product-brief-zOS-clone-2026-02-12.md
_bmad/_config/: agent-manifest.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
carddemo-config/: prepare-data.sh  run-carddemo.sh
crates/open-mainframe/: Cargo.toml
crates/open-mainframe-assess/: Cargo.toml
crates/open-mainframe-cics/: Cargo.toml
crates/open-mainframe-cics/copybooks/: DFHBMSCA.cpy
crates/open-mainframe-cics/src/: lib.rs
crates/open-mainframe-cics/src/bms/: render.rs  symbolic.rs
crates/open-mainframe-cics/src/preprocess/: mod.rs
crates/open-mainframe-cics/src/queues/: mod.rs  td.rs  ts.rs
crates/open-mainframe-cics/src/runtime/: commands.rs  dispatcher.rs  mod.rs
crates/open-mainframe-cics/src/sync/: mod.rs
crates/open-mainframe-cics/src/terminal/: mod.rs  screen.rs
crates/open-mainframe-cobol/: Cargo.toml
crates/open-mainframe-dataset/: Cargo.toml
crates/open-mainframe-dataset/src/: bsam.rs  catalog.rs  lib.rs  locking.rs
crates/open-mainframe-dataset/src/gdg/: generation.rs  mod.rs
crates/open-mainframe-dataset/src/idcams/: commands.rs  mod.rs  parser.rs
crates/open-mainframe-dataset/src/vsam/: aix.rs  cluster.rs  lds.rs  mod.rs  rrds.rs
crates/open-mainframe-db2/: Cargo.toml
crates/open-mainframe-deploy/: Cargo.toml
crates/open-mainframe-encoding/: Cargo.toml
crates/open-mainframe-encoding/src/: error.rs  field_conversion.rs  lib.rs
crates/open-mainframe-encoding/src/decimal/: mod.rs  national.rs  zoned.rs
crates/open-mainframe-encoding/src/ebcdic/: dbcs.rs  extended_tables.rs  mod.rs  registry.rs  tables.rs
crates/open-mainframe-ims/: Cargo.toml
crates/open-mainframe-jcl/: Cargo.toml
crates/open-mainframe-mq/: Cargo.toml
crates/open-mainframe-mq/src/: core.rs  lib.rs  mqi.rs  mqsc.rs  structures.rs
crates/open-mainframe-runtime/: Cargo.toml
crates/open-mainframe-smf/: Cargo.toml
crates/open-mainframe-smf/src/: lib.rs  record.rs  writer.rs
crates/open-mainframe-sort/: Cargo.toml
crates/open-mainframe-tso/: Cargo.toml
crates/open-mainframe-tui/: Cargo.toml
crates/open-mainframe-tui/src/: dbcs.rs  event.rs  fields.rs  input.rs  lib.rs  mock.rs  renderer.rs  session.rs  structured_fields.rs  styles.rs  tn3270.rs
crates/open-mainframe-tui/tests/: callback_pipeline_tests.rs  mock_terminal_tests.rs  session_interactive_tests.rs  snapshot_tests.rs
crates/open-mainframe-zosmf/: Cargo.toml
crates/zos-clone/: Cargo.toml
crates/zos-cobol/: Cargo.toml
crates/zos-cobol/src/: error.rs  lib.rs
crates/zos-cobol/src/ast/: mod.rs
crates/zos-cobol/src/codegen/: context.rs  data_layout.rs
crates/zos-cobol/src/intrinsics/: datetime.rs  mod.rs  numeric.rs
crates/zos-cobol/src/lexer/: keywords.rs  mod.rs  scanner.rs  token.rs
crates/zos-cobol/src/parser/: mod.rs
crates/zos-cobol/src/semantic/: analyzer.rs  mod.rs  symbol_table.rs
crates/zos-dataset/: Cargo.toml
crates/zos-dataset/src/: catalog.rs  error.rs  lib.rs  qsam.rs  types.rs
crates/zos-dataset/src/gdg/: base.rs  mod.rs
crates/zos-dataset/src/idcams/: commands.rs  mod.rs
crates/zos-dataset/src/vsam/: esds.rs  ksds.rs  mod.rs
crates/zos-encoding/: Cargo.toml
crates/zos-encoding/src/: error.rs  lib.rs
crates/zos-encoding/src/decimal/: binary.rs  packed.rs
crates/zos-encoding/src/ebcdic/: tables.rs
crates/zos-jcl/: Cargo.toml
crates/zos-runtime/: Cargo.toml
crates/zos-runtime/src/: decimal.rs  error.rs  interpreter.rs  io.rs  lib.rs  string.rs
crates/zos-sort/: Cargo.toml
deploy/: Dockerfile
deploy/grafana/: open-mainframe-dashboard.json
deploy/kubernetes/: configmap.yaml  deployment.yaml
docs/planning/: carddemo-gap-analysis.md
docs/research/: MAINFRAME-MODERNIZATION-LANDSCAPE-2025-2026.md
openmainframe-agent/: .dockerignore  .env.example  .gitignore  BATCH_LOG.md  Dockerfile.carddemo  Makefile  docker-compose.carddemo.yml  package-lock.json  package.json  tailwind.config.ts
openmainframe-agent/agent/: .env.example  =0.52.0  litellm-config.yaml  main.py  pyproject.toml
openmainframe-agent/agent/src/: agent.py  bridge_client.py  checkpointer.py  config.py  prompts.py  state.py
openmainframe-agent/agent/src/nodes/: __init__.py  assess.py  router.py
openmainframe-agent/agent/src/tools/: __init__.py  assess_tools.py  base.py  bash_tool.py  compile_tools.py  dataset_tools.py  execute_tools.py  file_tools.py  parse_tools.py  search_tools.py
packaging/: build.sh
(+258 files in other folders)
