[package]
name = "open-mainframe-mq"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "IBM MQ — Queue manager, MQI operations, message descriptors, and MQSC command engine"

[dependencies]
miette.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
