[package]
name = "zos-dataset"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Dataset and file I/O for zOS-clone"

[dependencies]
miette.workspace = true
thiserror.workspace = true
zos-encoding.workspace = true

[dev-dependencies]
