[package]
name = "zos-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime library for zOS-clone COBOL execution"

[dependencies]
miette.workspace = true
thiserror.workspace = true
zos-encoding.workspace = true

[dev-dependencies]
