[project]
name = "openmainframe-agent"
version = "1.0.0"
description = "AI-powered mainframe modernization agent using Anthropic SDK + AG-UI"
requires-python = ">=3.11"

dependencies = [
    "anthropic>=0.52.0",
    "ag-ui-protocol>=0.1.10",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
